fixed mobile spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,7 @@
 img{
   will-change: transform;
 }
+
+.swiper-pagination{
+  @apply relative bottom-0;
+}
